--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.hdf5
-results/*
-models/*
+//results/*
+//models/*
 vars_*
 catboost_info
-cbu/*
-CatBoost_ibug/*
+//cbu/*
+//CatBoost_ibug/*
 __pycache__
